--- a/news.html
+++ b/news.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Web Site Builder Description">
   <title>news</title>
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
@@ -16,6 +17,7 @@
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -23,18 +25,62 @@
   
 </head>
 <body>
-<section class="mbr-section mbr-section__container article" id="header3-5u" data-rv-view="90" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section id="ext_menu-5a" data-rv-view="192">
+
+    <nav class="navbar navbar-dropdown">
+        <div class="container">
+
+            <div class="mbr-table">
+                <div class="mbr-table-cell">
+
+                    <div class="navbar-brand">
+                        <a href="https://mobirise.com" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
+                        <a class="navbar-caption text-white" href="index.html" target="_blank">高雄・休修臉・美學&nbsp;</a>
+                    </div>
+
+                </div>
+                <div class="mbr-table-cell">
+
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                        <div class="hamburger-icon"></div>
+                    </button>
+
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="menu.html" target="_blank">服務項目</a></li><li class="nav-item"><a class="nav-link link" href="https://line.me/R/ti/p/%40llr0044b" target="_blank">LINE ME</a></li></ul>
+                    <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                        <div class="close-icon"></div>
+                    </button>
+
+                </div>
+            </div>
+
+        </div>
+    </nav>
+
+</section>
+
+<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="183" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">最新消息</span></h3>
+                <h3 class="mbr-section-title display-2">&nbsp;</h3>
+                <small class="mbr-section-subtitle"></small>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-5u" data-rv-view="90" style="background-color: rgb(204, 204, 204); padding-top: 20px; padding-bottom: 0px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">最新消息</h3>
                 <small class="mbr-section-subtitle"><span style="font-style: normal;">2017.9.1</span><br></small>
             </div>
         </div>
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">free site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2" id="header6-5r" data-rv-view="92" style="background-image: url(assets/images/1501338106550-796x591.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2" id="header6-5r" data-rv-view="92" style="background-image: url(assets/images/1501338106550-796x591.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
@@ -46,7 +92,7 @@
                 <div class="mbr-section row">
                     <div class="mbr-table-md-up">
                         
-                        <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 56%;">
+                        <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 55%;">
                             <div class="mbr-figure"><img src="assets/images/-1239x1754.jpg"></div>
                         </div>
                         <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
@@ -75,23 +121,21 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-5s" data-rv-view="95" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2"></h3>
-                <small class="mbr-section-subtitle">&nbsp;<br><br></small>
-            </div>
-        </div>
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4z" data-rv-view="193" style="background-color: rgb(255, 255, 255); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+    
+    <div class="container text-xs-center">
+        <p>- 高雄 休修臉 美學 -<br><br></p>
     </div>
-</section>
+</footer>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
