--- a/page20.html
+++ b/page20.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web development software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7e" data-rv-view="264" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/d">web page software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7e" data-rv-view="264" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -86,7 +86,7 @@
 
                   </div>
 
-                  <div><a class="btn btn-primary" href="https://mobirise.com">照片分享<br></a></div>
+                  <div><a class="btn btn-primary" href="page21.html" target="_blank">照片分享<br></a></div>
               </div>
 
 
