--- a/news.html
+++ b/news.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="142" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/i">build a website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-5z" data-rv-view="142" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
