--- a/page8.html
+++ b/page8.html
@@ -79,7 +79,7 @@
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list">體驗價＄599</div>
+                      <div class="mbr-plan-list"><p>單次價$900 / 四堂 $3000</p></div>
                       
                     </div>
                 </div>
@@ -92,7 +92,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
